# PromptGPT-OS

./: COMPLETE_PROJECT_FILES.txt  PRODUCTION_CHECKLIST.md  PromptGPT  README.md  README_INSTALL.md  RELEASE_NOTES.txt  TEMPLATE_EXAMPLE.txt  check_system.py  install.bat  install.sh  main.py  package_info.json  project_requirements.txt  promptgbt_os.py  promptgbt_os_update.py  pyproject.toml  requirements.txt  run_promptgpt.py
config/: settings.py
data/: promptgpt_offline.db  questions.json  templates.json
ui/: display.py
utils/: animations.py  clipboard_manager.py  error_handeler.py  error_handler.py  file_handler.py  history_manager.py  navigation.py  prompt_generator.py  quick_copy.py  settings_manager.py  template_guide.py  test_runner.py
