[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "keyboard>=0.13.5",
    "psycopg2-binary>=2.9.10",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.41",
]
